[package]
name = "addr-hal"
version = "0.1.1"
authors = ["tiannian <dtiannian@aliyun.com>"]
edition = "2018"
description = "Abstract for network address for std and no_std."
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/KarmaNetwork/addr-hal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
addr-mock = { path = "../addr-mock" }

