[package]
name = "addr-mock"
version = "0.1.0"
authors = ["tiannian <dtiannian@aliyun.com>"]
edition = "2018"
description = "Mock implement for addr-hal."
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/KarmaNetwork/addr-mock"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
addr-hal = { path = "../" }

